tests/chapter_18/invalid_parse/extra_credit/union_bad_type_spec.c
// Can't combine union type specifier with other type specifier
union x LONG64 a;